# backend/swagger-output.json
@@ -802,6 +802,221 @@
         }
       }
     },
+    "/products": {
+      "post": {
+        "summary": "Cria um novo produto.",
+        "description": "Cria um novo produto para o usuário autenticado. O estoque inicial será 0.",
+        "tags": [
+          "Products"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "name",
+                  "unit_cost"
+                ],
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "O nome do novo produto."
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "A descrição do produto (opcional)."
+                  },
+                  "unit_cost": {
+                    "type": "number",
+                    "format": "float",
+                    "description": "O custo unitário do produto."
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Produto criado com sucesso.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "format": "uuid",
+                      "description": "O ID único do produto criado."
+                    },
+                    "name": {
+                      "type": "string",
+                      "description": "O nome do produto criado."
+                    },
+                    "description": {
+                      "type": "string",
+                      "description": "A descrição do produto criado."
+                    },
+                    "unit_cost": {
+                      "type": "number",
+                      "format": "float",
+                      "description": "O custo unitário do produto criado."
+                    },
+                    "user_id": {
+                      "type": "string",
+                      "format": "uuid",
+                      "description": "O ID do usuário ao qual o produto pertence."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Requisição inválida. Dados fornecidos são inválidos."
+          },
+          "401": {
+            "description": "Não autorizado. Token de autenticação ausente ou inválido."
+          },
+          "500": {
+            "description": "Erro interno do servidor."
+          }
+        }
+      }
+    },
+    "/products/{id}": {
+      "put": {
+        "summary": "Atualiza um produto existente.",
+        "description": "Atualiza os detalhes de um produto específico pelo seu ID.",
+        "tags": [
+          "Products"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "required": true,
+            "description": "O ID do produto a ser atualizado."
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "O novo nome do produto."
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "A nova descrição do produto."
+                  },
+                  "unit_cost": {
+                    "type": "number",
+                    "format": "float",
+                    "description": "O novo custo unitário do produto."
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Produto atualizado com sucesso.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "format": "uuid",
+                      "description": "O ID único do produto atualizado."
+                    },
+                    "name": {
+                      "type": "string",
+                      "description": "O nome do produto atualizado."
+                    },
+                    "description": {
+                      "type": "string",
+                      "description": "A descrição do produto atualizado."
+                    },
+                    "unit_cost": {
+                      "type": "number",
+                      "format": "float",
+                      "description": "O custo unitário do produto atualizado."
+                    },
+                    "user_id": {
+                      "type": "string",
+                      "format": "uuid",
+                      "description": "O ID do usuário ao qual o produto pertence."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Requisição inválida. Dados fornecidos são inválidos ou nenhum campo para atualizar foi fornecido."
+          },
+          "401": {
+            "description": "Não autorizado. Token de autenticação ausente ou inválido."
+          },
+          "404": {
+            "description": "Produto não encontrado ou você não tem permissão para atualizar este produto."
+          },
+          "500": {
+            "description": "Erro interno do servidor."
+          }
+        }
+      },
+      "delete": {
+        "summary": "Deleta um produto.",
+        "description": "Deleta um produto específico pelo seu ID.",
+        "tags": [
+          "Products"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "required": true,
+            "description": "O ID do produto a ser deletado."
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Produto deletado com sucesso. Nenhuma resposta de conteúdo."
+          },
+          "400": {
+            "description": "Requisição inválida. ID do produto fornecido é inválido."
+          },
+          "401": {
+            "description": "Não autorizado. Token de autenticação ausente ou inválido."
+          },
+          "404": {
+            "description": "Produto não encontrado ou você não tem permissão para deletar este produto."
+          },
+          "500": {
+            "description": "Erro interno do servidor."
+          }
+        }
+      }
+    },
     "/profile": {
       "get": {
         "summary": "Retorna o perfil do usuário autenticado.",
